--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 # emacs auto
-emacs/.emacs.d/**
+emacs/dot-emacs.d/*
+!emacs/dot-emacs/sm-work.el
+!emacs/dot-emacs/snippets.el
+emacs/dot-emacs.d/elpa
 !sm-core.el
 projectile-bookmarks.eld
