emacs: don't bother with the dot-X feature of stow
In the end it's just more confusing. The `.emacs` or `.bashrc` etc are
all special and recognised by a variety of editor, whereas the
`dot-emacs` does not. The symetry between the destination and source
file is a lot easier to handle.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # emacs auto
-emacs/dot-emacs.d/*
-emacs/dot-emacs.d/elpa
+emacs/.emacs.d/*
+emacs/.emacs.d/elpa
 
-!emacs/dot-emacs.d/snippets
-!spm-*
-!emacs/dot-emacs.d/bookmarks.gpg
+!emacs/.emacs.d/snippets
+!emacs/.emacs.d/spm
+!emacs/.emacs.d/bookmarks.gpg
