--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 emacs/.emacs.d/*
 emacs/.emacs.d/elpa
 
+!emacs/.emacs.d/init.el
 !emacs/.emacs.d/snippets
 !emacs/.emacs.d/spm
 !emacs/.emacs.d/bookmarks.gpg
